--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Meddon&family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 @import "tailwindcss";
 @import "tw-animate-css";
 
@@ -6,7 +7,8 @@
 @theme inline {
   --color-background: var(--background);
   --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
+  --font-serif: "Playfair Display", serif;
+  --font-sans: "Poppins", sans-serif;
   --font-mono: var(--font-geist-mono);
   --color-sidebar-ring: var(--sidebar-ring);
   --color-sidebar-border: var(--sidebar-border);
@@ -41,6 +43,96 @@
   --radius-md: calc(var(--radius) - 2px);
   --radius-lg: var(--radius);
   --radius-xl: calc(var(--radius) + 4px);
+
+  /* Custom Variables for texts*/
+  --font-h1: "Playfair Display", serif;
+  --font-h1--font-weight: 400;
+
+  --font-h2: "Meddon", cursive;
+  --font-h2--font-weight: 400;
+
+  --font-h3: "Playfair Display", serif;
+  --font-h3--font-weight: 400;
+
+  --font-h4: "Playfair Display", serif;
+  --font-h4--font-weight: 400;
+
+  --font-h5: "Playfair Display", serif;
+  --font-h5--font-weight: 400;
+
+  --font-h6: "Playfair Display", serif;
+  --font-h6--font-weight: 400;
+
+  --font-h7: "Poppins", sans-serif;
+  --font-h7--font-weight: 300;
+
+  --font-h8: "Poppins", sans-serif;
+  --font-h8--font-weight: 500;
+
+  --font-h9: "Poppins", sans-serif;
+  --font-h9--font-weight: 400;
+
+  --font-p: "Poppins", sans-serif;
+  --font-p--font-weight: 300;
+
+  --font-ps: "Poppins", sans-serif;
+  --font-ps--font-weight: 300;
+
+  --font-pxs: "Poppins", sans-serif;
+  --font-pxs--font-weight: 300;
+
+  --text-h1: 11.25rem;
+  --text-h1--line-height: 11.25rem;
+  --text-h1--letter-spacing: 0.005rem;
+  --text-h1--text-align: center;
+
+  --text-h2: 10rem;
+  --text-h2--line-height: 1;
+  --text-h2--letter-spacing: 0.005rem;
+  --text-h2--text-align: center;
+
+  --text-h3: 4rem;
+  --text-h3--line-height: 1;
+  --text-h3--letter-spacing: 0.0005rem;
+
+  --text-h4: 3rem;
+  --text-h4--line-height: 1;
+  --text-h4--letter-spacing: 0.015rem;
+
+  --text-h5: 2.5rem;
+  --text-h5--line-height: 1;
+  --text-h5--letter-spacing: 0.015rem;
+
+  --text-h6: 2rem;
+  --text-h6--line-height: 2.5rem;
+  --text-h6--letter-spacing: 0.015rem;
+
+  --text-h7: 1.5rem;
+  --text-h7--line-height: 1.5rem;
+  --text-h7--letter-spacing: 0.015rem;
+
+  --text-h8: 1.25rem;
+  --text-h8--line-height: 1.25rem;
+  --text-h8--letter-spacing: 0.015rem;
+
+  --text-h9: 1rem;
+  --text-h9--line-height: 1.25rem;
+  --text-h9--letter-spacing: 0.015rem;
+
+  --text-p: 1.25rem;
+  --text-p--line-height: 1.875rem;
+  --text-p--letter-spacing: 0.125rem;
+  --text-p--text-align: center;
+
+  --text-ps: 1rem;
+  --text-ps--line-height: 1.375rem;
+  --text-ps--letter-spacing: 0.125rem;
+  --text-ps--text-align: center;
+
+  --text-pxs: 0.75rem;
+  --text-pxs--line-height: 1.125rem;
+  --text-pxs--letter-spacing: 0.125rem;
+  --text-pxs--text-align: center;
 }
 
 :root {
